--- a/main.tex
+++ b/main.tex
@@ -101,7 +101,7 @@
 			\end{figure}
 		\column{0.4875\textwidth}
 		    \centering
-		    \inlineMovie[loop&autostart]{sortin.avi}{sorting_gif-0.png}{width=\textwidth}
+		    \inlineMovie[loop&autostart]{msortin.avi}{sorting_gif-0.png}{width=\textwidth}
 		\column{0.0125\textwidth}
 	\end{columns}
     \includegraphics[]{}
